# sscanf

./: .gitignore  .gitmodules  Cargo.toml  Changelog.md  Readme.md  doc.bat  find_duplicate_tests.sh  test  test.bat  test.sh  todo.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  rust.yml  test.yml
src/: __macro_utilities.rs  error.rs  errors.rs  from_scanf.rs  lib.rs  macros.rs  match_tree.rs  parser_object.rs  regex_representation.rs  types.rs
src/advanced/: format_options.rs  match_tree.rs  matcher.rs  mod.rs
src/advanced/match_tree/: alt.rs  context.rs  raw.rs  seq.rs  template.rs
src/from_scanf/: format_options.rs  impls.rs  regex_segment.rs  sub_type.rs
src/from_scanf/impls/: numeric.rs  other.rs
sscanf_macro/: Cargo.toml  LICENSE-MIT  Readme.md
sscanf_macro/src/: _format_config.rs  attribute.rs  attributes.rs  chrono.rs  derive.rs  error.rs  format_config.rs  format_option.rs  format_string.rs  lib.rs  placeholder.rs  regex_parts.rs  str_lit.rs  ty.rs  utils.rs
sscanf_macro/src/attribute/: enum.rs  field.rs  struct.rs  variant.rs
sscanf_macro/src/format_string/: format_options.rs  parser.rs  placeholder.rs
sscanf_macro/src/format_string/format_options/: parse.rs  print.rs
sscanf_macro/src/utils/visitors/: lifetime.rs
tests/: .gitignore  derive.rs  expand_tmp.sh  should_panic.rs  test.rs  tmp.rs
tests/chrono/: mod.rs
tests/chrono/fail_nightly/: incomplete.rs  incomplete.stderr  unknown.stderr
tests/chrono/fail_stable/: incomplete.stderr  unknown.rs  unknown.stderr
tests/derive/: enum.rs  field.rs  struct.rs
tests/fail/: derive_enum_attributes.rs  derive_enum_attributes.stderr  derive_field_attributes.rs  derive_field_attributes.stderr  derive_struct_attributes.rs  derive_struct_attributes.stderr  input_byte_str.stderr  input_not_str.rs  input_not_str.stderr  missing_brackets.rs  missing_brackets.stderr  missing_literal.rs  missing_literal.stderr  missing_params.rs  missing_params.stderr  missing_placeholder.rs  missing_placeholder.stderr  missing_trait_from_str.rs  missing_trait_from_str.stderr  missing_trait_regex.stderr  missing_traits.stderr  no_from_str.rs  no_from_str.stderr  no_regex.stderr  no_traits.rs  no_traits.stderr  non_unicode.rs  non_unicode.stderr  str_lifetime.rs  str_lifetime.stderr
tests/fail/ch_nightly/: input_not_str.stderr  invalid_custom_regex.rs  invalid_custom_regex.stderr  invalid_type_in_placeholder.stderr  missing_bracket.rs  missing_bracket.stderr  missing_open_bracket.stderr  missing_params.stderr  missing_trait_from_str.stderr  missing_trait_regex.rs  missing_trait_regex.stderr  missing_traits.rs  missing_type.rs  missing_type.stderr  no_from_str.stderr  old_formats.stderr  raw_string.stderr
tests/fail/ch_stable/: input_not_str.stderr  invalid_custom_regex.rs  invalid_custom_regex.stderr  invalid_type_in_placeholder.rs  invalid_type_in_placeholder.stderr  invalid_type_in_placeholder.stderr.old  missing_bracket.stderr  missing_close_bracket.rs  missing_close_bracket.stderr  missing_literal.stderr  missing_open_bracket.stderr  missing_trait_from_str.stderr  missing_trait_regex.stderr  missing_traits.stderr  missing_type.rs  missing_type.stderr  old_formats.rs  old_formats.stderr  raw_string.rs  raw_string.stderr  raw_string.stderr.old
tests/fail/feat_no_chrono/: missing_chrono.rs  missing_chrono.stderr
tests/fail/nightly/: derive_field_attributes.rs  derive_field_attributes.stderr  derive_placeholders.stderr  input_not_str.rs  input_not_str.stderr  invalid_custom_regex.rs  invalid_custom_regex.stderr  invalid_placeholder.rs  invalid_placeholder.stderr  invalid_radix_option.rs  invalid_radix_option.stderr  invalid_type_in_placeholder.rs  invalid_type_in_placeholder.stderr  missing_bracket.rs  missing_bracket.stderr  missing_trait.rs  missing_trait.stderr  missing_trait_from_str.rs  missing_trait_from_str.stderr  missing_trait_regex.rs  missing_trait_regex.stderr  missing_type.rs  missing_type.stderr  non_unicode.rs  non_unicode.stderr  old_formats.rs  old_formats.stderr  raw_string.rs  raw_string.stderr  str_lifetime.stderr
tests/fail/stable/: derive_field_attributes.stderr  derive_placeholders.rs  derive_placeholders.stderr  input_not_str.stderr  invalid_custom_regex.rs  invalid_custom_regex.stderr  invalid_placeholder.rs  invalid_placeholder.stderr  invalid_radix_option.stderr  invalid_type_in_placeholder.rs  invalid_type_in_placeholder.stderr  missing_bracket.stderr  missing_trait.stderr  (+9 more)
tests/fail_linux/: input_byte_str.stderr  input_not_str.stderr  no_from_str.stderr
tests/fail_nightly/: input_not_str.stderr  missing_close_bracket.stderr  missing_open_bracket.rs  missing_params.stderr  missing_type.rs  missing_type.stderr  raw_string.stderr
tests/fail_no_chrono/: missing_chrono.stderr
tests/fail_stable/: input_byte_str.rs  input_not_str.rs  missing_close_bracket.stderr  missing_open_bracket.stderr  missing_params.stderr  missing_type.rs  missing_type.stderr  no_from_str.rs  no_regex.rs  no_traits.rs  no_traits.stderr  raw_string.rs
tests/fail_syntax/: literal.rs  literal.stderr  literal_none.rs  literal_none.stderr  literal_none_comma.rs  literal_none_comma.stderr  literal_none_get_regex.rs  literal_none_get_regex.stderr  literal_str.rs  literal_str.stderr  params_none.rs  params_none.stderr
tests/fail_windows/: input_byte_str.stderr
tests/no_chrono/: missing_chrono.rs
tests/src/: parser_object.rs
tests/types/: full_f32.rs  full_f64.rs  hex_number.rs
(+16 files in other folders)
