[package]
name = "sscanf"
version = "0.5.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "A sscanf (inverse of format!()) Macro based on Regex"
repository = "https://github.com/mich101mich/sscanf"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["parsing", "regex", "text", "string", "scanf"]
categories = ["parsing"]
exclude = ["/.vscode", "/.gitignore", "/.github", "/*.bat", "/*.sh", "/todo.md", "/submodules", "/.gitmodules"]

[dependencies]
sscanf_macro = { path = "sscanf_macro", version = "=0.5.0" }
const_format = "0.2.34"
regex-automata = "0.4.0"
regex-syntax = "0.8.0"

[dev-dependencies]
trybuild = "1.0.78"
rustc_version = "0.4.0"
