[package]
name = "sscanf_macro"
version = "0.5.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"
rust-version = "1.70.0"
description = "Proc-Macros for the sscanf crate. Not meant to be used as a standalone crate"
repository = "https://github.com/mich101mich/sscanf"
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.1", features = ["parsing", "derive", "full"] }
quote = "1.0.0"
proc-macro2 = "1.0.60"
regex-syntax = "0.8.0"
strsim = "0.11.1"
convert_case = "0.7.1"
unicode-width = "0.1.5"
