[package]
name = "sscanf_macro"
version = "0.5.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "Proc-Macros for the sscanf Crate. Not meant to be used as a standalone Crate"
repository = "https://github.com/mich101mich/sscanf"
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.1", features = ["full"] }
quote = "1.0.0"
proc-macro2 = "1.0.60"
strsim = "0.11.1"
convert_case = "0.8.0"
unicode-width = { version = "0.2.1", default-features = false }
